@@ -9,7 +9,6 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class AccountMapper {
@@ -73,7 +72,7 @@ public class AccountMapper {
         }
         return models.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Account> toModelList(List<AccountDTO> dtos) {
@@ -82,6 +81,6 @@ public class AccountMapper {
         }
         return dtos.stream()
                 .map(this::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
